Sidebar position fixed; adjust spacing, footer in right column

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -7,7 +7,6 @@
 /*cobalt #5C63BB*/
 /*https://color.adobe.com/create/color-wheel/?base=2&rule=Custom&selected=3&name=My%20Color%20Theme&mode=rgb&rgbvalues=0.20784313725490197,0.10196078431372549,0.17647058823529413,0.3137254901960784,0.21176470588235294,0.3176470588235294,0.9570666666666451,0.896711111111111,0.97,0.8313725490196079,0.7686274509803922,0.8823529411764706,0.996078431372549,0.9686274509803922,0.996078431372549&swatchOrder=0,1,3,2,4*/
 
-
 body {
     padding: 50px;
     font: 14px Calibri, "Lucida Grande", Helvetica, Arial, sans-serif;
@@ -47,9 +46,17 @@ code {
 }
 
 @media (min-width: 768px) {
+    header {
+        padding-right: 1.5em;
+    }
+
     .modal-dialog {
         width: 650px;
         margin: 30px auto;
+    }
+
+    .left {
+        position: fixed;
     }
 }
 
